<resources>
    <string name="app_name">"Drinkn't"</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="upload_string">UPLOAD</string>
    <string name="camera_string">CAMERA</string>
    <string name="scan_here_string">SCAN</string>
    <string name="drinkn__string">DRINKN</string>
    <string name="result_ek3_string">RESULT</string>
    <string name="drinkn_t___version__1_0_string">"DRINKN'T - VERSION: 1.0"</string>
    <string name="drinkn_t_merupakan">Drinknt merupakan sebuah aplikasi yang dibuat untuk mengetahui kandungan gula yang ada pada minuman kemasan. Hal ini bertujuan untuk menekan angka diabetes yang terus meningkat di Indonesia belakangan ini. Harapannya dengan mudahnya mengetahui kandungan gula yang ada di minuman kemasan dapat membuat masyarakat di Indonesia dapat lebih perhatian terhadap gula yang dikonsumsi setiap harinya. Aplikasi ini juga dibuat untuk syarat kelulusan dari Studi Independent pada Bangkit Academy 2024. Aplikasi ini dibuat oleh kelompok C241-PS494 dengan penuh dedikasi dan perjuangan dari tiap-tiap anggota kelompoknya.</string>
    <string name="imglogo">image logo</string>
    <string name="soda">soda water</string>
    <string name="input">input image</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="hello">Hello,</string>
    <string name="username">User Name</string>
    <string name="gula_harian">Gula Harian</string>
    <string name="_50_gram">50 Gram</string>
    <string name="scan_here">SCAN HERE</string>
    <string name="gula_hari_ini">Gula Hari Ini</string>
    <string name="_10_gram">10 Gram</string>
    <string name="riwayat_minum">Riwayat Minuman</string>
    <string name="teh_botol_string">Teh Botol</string>
    <string name="status">Status Saat Ini</string>
    <string name="aman">Aman</string>
    <string name="info_diabet">INFORMASI DIABETES</string>
    <string name="riwayat_scan">RIWAYAT</string>
    <string name="cs">CUSTOMER SERVICE</string>
    <string name="hasil">Result</string>
    <string name="start">Start</string>
    <string name="akan_datang">COMING SOON</string>
    <string name="pilih_tindakan">Pilih Tindakan</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="slogan">Drink Smart, Live Well</string>
    <string name="login">Login</string>
    <string name="typ_email">Type Your Email</string>
    <string name="typ_pass">Type Your Password</string>
    <string name="eightCharPass">Password must have 8 characters</string>
    <string name="emptyName">Name cannot be empty</string>
    <string name="wrongEmailFormat">Wrong Email Format</string>
    <string name="emailTaken">Email Already Registered, please try again! </string>
    <string name="passNotSame">Password does not match</string>
    <string name="noEmail">Invalid email</string>
    <string name="noPass">Invalid password</string>
    <string name="noName">Invalid name</string>
    <string name="noSamePass">Confirm Password is invalid</string>
    <string name="error_load">Error Loading</string>
    <string name="show_pass">Show Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="dont_have_account">"Don't have an account?"</string>
    <string name="register">Register</string>
    <string name="or_signup">Or Sign Up With</string>
</resources>