<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ScanActivity">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="25dp"
            app:layout_constraintTop_toBottomOf="@+id/progressIndicator">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/inter"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/username"
                app:layout_constraintBottom_toBottomOf="@+id/hello"
                app:layout_constraintStart_toEndOf="@+id/hello"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hello"
                app:layout_constraintVertical_bias="0.086" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="280dp"
            android:contentDescription="@string/input"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rectangle_1"
            android:layout_width="320dp"
            android:layout_height="140dp"
            android:layout_marginTop="52dp"
            app:flow_verticalAlign="center"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rectangle_1"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/gula_harian"/>

            <TextView
                android:layout_width="65dp"
                android:layout_height="18dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/gula_harian"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="18dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="32dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/_50_gram"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/panah_1"/>


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/gula_hari_ini"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="18dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="80dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/gula_hari_ini"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="18dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="96dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/_10_gram"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/panah_1"/>


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="164dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/riwayat"/>

            <TextView
                android:layout_width="97dp"
                android:layout_height="18dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/riwayat_minum"/>

            <TextView
                android:layout_width="52dp"
                android:layout_height="18dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="32dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/teh_botol_string"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="285dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/panah_1"/>


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="165dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/status"/>

            <TextView
                android:layout_width="78dp"
                android:layout_height="18dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="80dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/status"/>

            <TextView
                android:layout_width="52dp"
                android:layout_height="18dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="96dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/aman"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="285dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/panah_1"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rectangle_2"
            android:layout_width="330dp"
            android:layout_height="250dp"
            android:layout_marginTop="52dp"
            app:flow_verticalAlign="center"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_1">

        <ImageView
            android:id="@+id/btnTindakan"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/btntindakan"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="18dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="90dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/scan_here"/>


        <ImageView
            android:id="@+id/btnInfo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/btninfo" />


        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="130dp"
            android:layout_height="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="230dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/info_diabet" />

        <ImageView
            android:id="@+id/btnRiwayat"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="202dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/btnriwayat" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="18dp"
            android:layout_marginStart="205dp"
            android:layout_marginTop="90dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/riwayat_scan" />


        <ImageView
            android:id="@+id/btnCS"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="202dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/btncs" />

        <TextView
            android:id="@+id/tvCS"
            android:layout_width="130dp"
            android:layout_height="18dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="230dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/cs"/>
        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>