<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="320dp"
        android:layout_height="196dp"
        android:layout_marginTop="52dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="25dp"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator">


        <TextView
            android:id="@+id/slogan"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:layout_marginStart="25dp"
            android:text="@string/slogan"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivlogin"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="120dp"
            android:contentDescription="@string/input"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login2"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:background="@drawable/rectangle_hasil"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="25dp"
        app:layout_constraintTop_toBottomOf="@+id/rl_login">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cvEmail"
            android:layout_marginBottom="16dp"/>

        <com.dicoding.drinknt.cv.EmailCV
            android:id="@+id/cvEmail"
            android:layout_width="280dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:textSize="15sp"
            android:hint="@string/typ_email"
            app:layout_constraintBottom_toTopOf="@+id/cvPass"
            app:layout_constraintEnd_toEndOf="@id/tvLogin"
            app:layout_constraintStart_toStartOf="@id/tvLogin"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

        <com.dicoding.drinknt.cv.PasswordCV
            android:id="@+id/cvPass"
            android:layout_width="280dp"
            android:layout_marginTop="150dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:textSize="15sp"
            android:hint="@string/typ_pass"
            app:layout_constraintBottom_toTopOf="@+id/seePass"
            app:layout_constraintEnd_toEndOf="@id/tvLogin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/tvLogin" />

        <CheckBox
            android:id="@+id/seePass"
            android:layout_width="280dp"
            android:layout_marginTop="205dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:alpha="0"
            android:text="@string/show_pass"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/tvLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvLogin"
            tools:alpha="1" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="280dp"
            android:layout_marginTop="280dp"
            android:layout_marginStart="20dp"
            android:layout_height="30dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:background="@drawable/btnlogin"
            app:layout_constraintBottom_toTopOf="@+id/txtNotRegis"
            app:layout_constraintEnd_toEndOf="@id/tvLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvLogin" />

        <TextView
            android:id="@+id/txtNotRegis"
            android:layout_width="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="50dp"
            android:layout_height="20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.392"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            tools:alpha="1" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="200dp"
            android:layout_height="20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtNotRegis"
            app:layout_constraintTop_toTopOf="@+id/txtNotRegis"
            tools:alpha="1" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
